Modified the possibleValue List implementation to allow value deletion